--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.1'
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.0'
+	implementation 'org.projectlombok:lombok:1.18.22'
+
 }
 
 tasks.named('test') {
